<resources>
    <string name="app_name">Tour Guide App</string>
    <string name="toast_message_fragments">Imagine this would open a website or another activity! :)</string>
    <string name="toast_message_main_activity">Just decoration, for now :)</string>
    <string name="official_channels">Official Channels</string>
    <string name="category_food">Restaurants</string>
    <string name="category_activities">Activities</string>
    <string name="category_attractions">Attractions</string>
    <string name="category_coffee">Cafe</string>
    <string name="vancouver">Vancouver</string>
    <string name="vancouver_underline"><u>Vancouver</u></string>
    <string name="tourism_vancouver">Tourism Vancouver</string>
    <string name="inside_vancouver">Inside Vancouver</string>
    <string name="vancouver_introduction">Vancouver, great choice! Make sure to pack your rain coats and umbrellas. They call it Raincouver for a reason.  \n\n\n <b>6 things to know about Vancouver:  </b>\n\n<b>1.</b> You can find people from everywhere. By the end of the day, you might have friends from 10 different countries. \n\n<b>2.</b> Vancouver is obsessed with sports, HAPPY HOUR, ramen and sushi. But obviously you can find delicious food from any cuisine, even vegetarian and vegan. \n\n<b>3.</b> Like Amsterdam, Vancouver is liberal about using recreational drugs in public, so you won’t get arrested if you use them (you need to be 19+). \n\n<b>4.</b> Movies like Godzilla, Deadpool, Twilight, and TV-Shows such as Supernatural, Riverdale and Arrow were filmed there. They are constantly filming, so you will probably see famous actors at some point *Fingers crossed, Ryan Reynolds*. \n\n<b>5.</b> You don’t need to rent a car in Vancouver. You can get around by SkyTrain, bus, renting a bicycle, and most importantly by walking, we walk a lot. \n\n<b>6.</b> The city has been ranked one of the most livable cities in the world for more than a decade. \n\n\n Swipe to the left to find some recommendations! ;)</string>
    <string name="vancouver_twitter_url">https://twitter.com/myvancouver</string>
    <string name="vancouver_instagram_url">https://www.instagram.com/inside_vancouver/</string>
    <string name="vancouver_website_url">https://www.tourismvancouver.com/</string>
    <string name="vancouver_facebook_url">https://www.facebook.com/insidevancouver/</string>
    <string name="frankies_italian_kitchen">Frankie\'s Italian Kitchen</string>
    <string name="frankies_italian_kitchen_info">Best Italian restaurant in Downtown.</string>
    <string name="boston_pizza">Boston Pizza</string>
    <string name="boston_pizza_info">Best location to eat and watch a game.</string>
    <string name="joey_burrard">JOEY Burrard</string>
    <string name="joey_burrard_info">Entire menu is fantastic. Try the Apple Pie!</string>
    <string name="italian_kitchen">Italian Kitchen</string>
    <string name="italian_kitchen_info">Good Italian cuisine.</string>
    <string name="devils_elbow">Devil\'s Elbow Ale &amp; Smoke House</string>
    <string name="devils_elbow_info">Great for meat lovers.</string>
    <string name="patron_tacos_cantina">Patron Tacos &amp; Cantina</string>
    <string name="patron_tacos_cantina_info">Best mexican restaurant in downtown.</string>
    <string name="ignite_pizza">Ignite Pizzeria Express</string>
    <string name="ignite_pizza_info">Unforgettable Pizzas and sauces.</string>
    <string name="vancouver_lookout">Vancouver Lookout</string>
    <string name="vancouver_lookout_info">Perfect place to have a view while eating.</string>
    <string name="joey_bentall_one">JOEY Bentall One</string>
    <string name="joey_bentall_one_info">It\'s JOEY, what are you waiting for?</string>
    <string name="le_petit_belge">Le Petit Belge</string>
    <string name="le_petit_belge_info">Good choice for breakfast.</string>
    <string name="pcr">Pacific Coffee Roasters</string>
    <string name="pcr_info">Best tea and ambiente in downtown.</string>
    <string name="starbucks">Starbucks</string>
    <string name="starbucks_info">Who doesn\'t like Starbucks?</string>
    <string name="blenz_coffe">Blenz Coffee</string>
    <string name="blenz_coffe_info">Great Coffee</string>
    <string name="waves_coffee">Waves Coffee House</string>
    <string name="waves_coffee_info">They are all over the place. Give them a try.</string>
    <string name="jj_bean">JJ Bean Coffe Roasters</string>
    <string name="jj_bean_info">Great coffee.</string>
    <string name="tim_hortons">Tim Hortons</string>
    <string name="tim_hortons_info">Can\'t go wrong with Tim Hortons, eh?</string>
    <string name="trees_organic_coffee">Trees Organic Coffee</string>
    <string name="trees_organic_coffee_info">Great tea and atmosphere.</string>
    <string name="climbing">Climbing</string>
    <string name="climbing_info">Squamish is fantastic for climbing.</string>
    <string name="skiing">Skiing</string>
    <string name="skiing_info">Try Cypress in winter.</string>
    <string name="cycling">Cycling</string>
    <string name="cycling_info">Gor for a ride in Stanley Park.</string>
    <string name="snowboarding">Snowboarding</string>
    <string name="snowboarding_info">Try Cypress in winter.</string>
    <string name="bungee_jumping">Bungee jumping</string>
    <string name="bungee_jumping_info">Got to Whistler for Bungee Jumping.</string>
    <string name="kayaking">Kayaking</string>
    <string name="kayaking_info">Get a kayak at Granville Island.</string>
    <string name="kitesurfing">Kitesurfing</string>
    <string name="kitesurfing_info">Go kitesurfing at the Ambleside Beach.</string>
    <string name="ice_skating">Ice Skating</string>
    <string name="ice_skating_info">Go ice skating at robson square in winter.</string>
    <string name="hiking">Hiking</string>
    <string name="hiking_info">Try the Grouse Grind.</string>
    <string name="skydiving">Skydiving</string>
    <string name="skydiving_info">You can go Skydiving in Victoria.</string>
    <string name="robson_square">Robson Square</string>
    <string name="robson_square_info">Many public things to do and see.</string>
    <string name="canada_place">Canada Place</string>
    <string name="canada_place_info">Try the FlyOver Canada film experience</string>
    <string name="granville_st">Granville St.</string>
    <string name="granville_st_info">Nightlife</string>
    <string name="robson_st">Robson St.</string>
    <string name="robson_st_info">If you want to go shopping and eating.</string>
    <string name="gastown">Gastown</string>
    <string name="gastown_info">You won\'t regret it. promised!</string>
    <string name="vancouver_lookout_attraction">Vancouver Lookout</string>
    <string name="vancouver_lookout_attraction_info">For a great view.</string>
    <string name="totem_poles">Totem Poles</string>
    <string name="totem_poles_info">If you want to see something historic.</string>
    <string name="van_seawall">Vancouver Seawall</string>
    <string name="van_seawall_info">Go here for a walk.</string>
    <string name="rogers_arena">Rogers Arena</string>
    <string name="rogers_arena_info">Watch a game with friends or strangers.</string>
    <string name="marine_building">Marine Building</string>
    <string name="marine_building_info">Vancouver\'s oldest building.</string>
    <string name="saskatoon">Saskatoon</string>
    <string name="saskatoon_underline"><u>Saskatoon</u></string>
    <string name="saskatoon_introduction">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Velit euismod in pellentesque massa. In est ante in nibh mauris cursus mattis. Nibh venenatis cras sed felis eget. Elementum pulvinar etiam non quam lacus suspendisse. Sollicitudin tempor id eu nisl nunc mi ipsum faucibus. Mauris augue neque gravida in fermentum. Nunc scelerisque viverra mauris in aliquam. Tristique senectus et netus et malesuada fames ac turpis egestas. Turpis egestas sed tempus urna et pharetra.</string>
    <string name="tourism_saskatoon">Tourism Saskatoon</string>
    <string name="visit_saskatoon">Visit Saskatoon</string>
    <string name="saskatoon_twitter_url">https://twitter.com/VisitSaskatoon</string>
    <string name="saskatoon_instagram_url">https://www.instagram.com/visitsaskatoon/</string>
    <string name="saskatoon_website_url">https://www.tourismsaskatoon.com/</string>
    <string name="saskatoon_facebook_url">https://www.facebook.com/TourismSaskatoon/</string>
    <string name="toronto">Toronto</string>
    <string name="toronto_underline"><u>Toronto</u></string>
    <string name="toronto_introduction">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Velit euismod in pellentesque massa. In est ante in nibh mauris cursus mattis. Nibh venenatis cras sed felis eget. Elementum pulvinar etiam non quam lacus suspendisse. Sollicitudin tempor id eu nisl nunc mi ipsum faucibus. Mauris augue neque gravida in fermentum. Nunc scelerisque viverra mauris in aliquam. Tristique senectus et netus et malesuada fames ac turpis egestas. Turpis egestas sed tempus urna et pharetra.</string>
    <string name="st_johns">St. Johns</string>
    <string name="st_johns_underline"><u>St. Johns</u></string>
    <string name="st_johns_introduction">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Velit euismod in pellentesque massa. In est ante in nibh mauris cursus mattis. Nibh venenatis cras sed felis eget. Elementum pulvinar etiam non quam lacus suspendisse. Sollicitudin tempor id eu nisl nunc mi ipsum faucibus. Mauris augue neque gravida in fermentum. Nunc scelerisque viverra mauris in aliquam. Tristique senectus et netus et malesuada fames ac turpis egestas. Turpis egestas sed tempus urna et pharetra.</string>
    <string name="restaurant_placeholder_one">Placeholder 1</string>
    <string name="restaurant_placeholder_one_info">Placeholder 1 info</string>
    <string name="restaurant_restaurant_placeholder_two">Placeholder 2</string>
    <string name="restaurant_placeholder_two_info">Placeholder 2 info</string>
    <string name="restaurant_placeholder_three">Placeholder 3</string>
    <string name="restaurant_placeholder_three_info">Placeholder 3 info</string>
    <string name="restaurant_placeholder_four">Placeholder 4</string>
    <string name="restaurant_placeholder_four_info">Placeholder 4 info</string>
    <string name="restaurant_placeholder_five">Placeholder 5</string>
    <string name="restaurant_placeholder_five_info">Placeholder 5 info</string>
    <string name="restaurant_placeholder_six">Placeholder 6</string>
    <string name="restaurant_placeholder_six_info">Placeholder 6 info</string>
    <string name="restaurant_placeholder_seven">Placeholder 7</string>
    <string name="restaurant_placeholder_seven_info">Placeholder 7 info</string>
    <string name="restaurant_placeholder_eight">Placeholder 8</string>
    <string name="restaurant_placeholder_eight_info">Placeholder 8 info</string>
    <string name="restaurant_placeholder_nine">Placeholder 9</string>
    <string name="restaurant_placeholder_nine_info">Placeholder 9 info</string>
    <string name="restaurant_placeholder_ten">Placeholder 10</string>
    <string name="restaurant_placeholder_ten_info">Placeholder 10 info</string>
    <string name="coffee_placeholder_one">Placeholder 1</string>
    <string name="coffee_placeholder_one_info">Placeholder 1 info</string>
    <string name="coffee_placeholder_two">Placeholder 2</string>
    <string name="coffee_placeholder_two_info">Placeholder 2 info</string>
    <string name="coffee_placeholder_three">Placeholder 3</string>
    <string name="coffee_placeholder_three_info">Placeholder 3 info</string>
    <string name="coffee_placeholder_four">Placeholder 4</string>
</resources>