<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/parent_linear_layout_padding_bottom"
        tools:context=".fragment.SaskatoonMainFragment">

        <!-- Photo by Sarath SunilDutt from Pexels. License: https://www.pexels.com/license/ -->
        <ImageView
            style="@style/city_banner_fragment"
            android:importantForAccessibility="no"
            android:src="@drawable/saskatoon_main_fragment_banner" />

        <!-- Saskatoon header. -->
        <TextView
            style="@style/city_header"
            android:text="@string/saskatoon_underline" />

        <!-- Introduction to Saskatoon. -->
        <TextView
            style="@style/city_description_style"
            android:text="@string/saskatoon_introduction" />

        <!-- Beginning of the official channel section. -->
        <TextView
            style="@style/official_channels"
            android:text="@string/official_channels" />

        <!-- Website. -->
        <LinearLayout
            android:id="@+id/website_saskatoon_linear_view"
            style="@style/channels_linear_layout_style"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/channels_icon_style"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_world_wide_web" />

            <TextView
                style="@style/channels_textview_style"
                android:text="@string/visit_saskatoon" />
        </LinearLayout>

        <!-- Twitter. -->
        <LinearLayout
            android:id="@+id/twitter_saskatoon_linear_view"
            style="@style/channels_linear_layout_style"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/channels_icon_style"
                android:importantForAccessibility="no"
                android:src="@drawable/ic__43_twitter" />

            <TextView
                style="@style/channels_textview_style"
                android:text="@string/visit_saskatoon" />
        </LinearLayout>

        <!-- Instagram. -->
        <LinearLayout
            android:id="@+id/instagram_saskatoon_linear_view"
            style="@style/channels_linear_layout_style"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/channels_icon_style"
                android:importantForAccessibility="no"
                android:src="@drawable/ic__25_instagram" />

            <TextView
                style="@style/channels_textview_style"
                android:text="@string/tourism_saskatoon" />
        </LinearLayout>

        <!-- Facebook. -->
        <LinearLayout
            android:id="@+id/facebook_saskatoon_linear_view"
            style="@style/channels_linear_layout_style"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/channels_icon_style"
                android:importantForAccessibility="no"
                android:src="@drawable/ic__21_facebook" />

            <TextView
                style="@style/channels_textview_style"
                android:text="@string/tourism_saskatoon" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>